# mlops-churn-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  dvc.yaml  main.py  params.yaml  project_guide.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/mcp/[tool]/: route.ts
frontend/src/components/: chat-interface.tsx  sidebar.tsx
frontend/src/lib/: mcp-tools.ts  types.ts
src/: __init__.py  mcp_server.py  schemas.py  train.py
src/config/: __init__.py  settings.py
src/core/data/: __init__.py  loader.py  preprocessor.py  validator.py
src/core/explainability/: __init__.py  shap_explainer.py
src/core/features/: engineer.py
src/core/models/: registry.py  trainer.py
src/interfaces/mcp/: __init__.py  server.py
src/schemas/: __init__.py  models.py
src/services/pipelines/: __init__.py  training_pipeline.py
src/utils/: logger.py
tests/: test_mcp_tools.py  test_model.py  test_schemas.py
