[project]
name = "mcp-ops"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "dvc>=3.66.1",
    "fastmcp>=2.14.4",
    "joblib>=1.5.3",
    "mlflow>=3.8.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
